@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.384 2005/05/18 22:39:00 wiz Exp $
+# $NetBSD: Makefile,v 1.385 2005/06/04 10:41:41 jmmv Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -261,8 +261,6 @@ SUBDIR+=	skencil
 SUBDIR+=	snx101view
 SUBDIR+=	sodipodi
 SUBDIR+=	spcaview
-SUBDIR+=	swfdec
-SUBDIR+=	swfdec-gtk2
 SUBDIR+=	tgif
 SUBDIR+=	tiff
 SUBDIR+=	tkpiechart
